# openclaw-ai-agents

./: README.md  openclaw.json
agents/ARC/: SOUL.md
agents/ARIA/: SOUL.md
agents/FRIEREN/skills_temp/skills/bluemax30001/guardian/: README.md  SECURITY.md  SKILL.md  _meta.json  config.json  install.sh  pyproject.toml  quickstart.py
agents/FRIEREN/skills_temp/skills/bluemax30001/guardian/billing/: __init__.py  billing_endpoints.py  stripe_integration.py
agents/FRIEREN/skills_temp/skills/bluemax30001/guardian/core/: __init__.py  api.py  cache.py  context_modifiers.py  guardian_db.py  realtime.py  scanner.py  settings.py  trust_levels.py
agents/FRIEREN/skills_temp/skills/bluemax30001/guardian/definitions/: exfil-patterns.json  injection-sigs.json  manifest.json  openclaw-hardening.json  social-engineering.json  tool-abuse.json  update.py
agents/FRIEREN/skills_temp/skills/bluemax30001/guardian/guardian/: __init__.py  capability.py
agents/FRIEREN/skills_temp/skills/bluemax30001/guardian/integrations/: __init__.py  langchain.py  webhook.py
agents/FRIEREN/skills_temp/skills/bluemax30001/guardian/scripts/: README.md  __init__.py  admin.py  audit_export.py  check_updates.py  daily_digest.py  dashboard_export.py  egress_scanner.py  guardian.py  local_audit.py  noc-email-collector.py  noc-guardian-threats.py  onboard.py  pre_publish_check.py  primary_notify_local.py  runtime_monitor.py  serve.py  telegram_notify.py
agents/FRIEREN/skills_temp/skills/edisonchenai/protea/: README.md  SKILL.md  _meta.json  pyproject.toml  run.py  run_with_nohup.sh  setup.sh  stop_run.sh
(+9168 files in other folders)
