[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "guardian-ai"
version = "2.4.4"
description = "Standalone AI security engine for prompt injection and tool abuse defense"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Guardian Contributors"}]
dependencies = []

[project.scripts]
guardian-scan = "scripts.guardian:main"
guardian-serve = "scripts.serve:main"
guardian-admin = "scripts.admin:main"

[tool.setuptools]
packages = ["guardian", "guardian.integrations", "core", "integrations", "scripts"]
