[project]
name = "protea"
version = "0.1.0"
description = "Self-evolving artificial life system"
requires-python = ">=3.11"
dependencies = [
    "markdown2",
    "reportlab",
]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools.packages.find]
include = ["ring0*", "ring1*", "config*", "reports*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
